binaries/wine/share/wine/mono/mono-6.12.0.182/mcs/class/Commons.Xml.Relaxng/y.output
   0  $accept : TopLevel $end

   1  TopLevel : Preamble TopLevelBody

   2  Preamble :
   3           | Decl Preamble

   4  Decl : KeywordNamespace NamespacePrefix Equal NamespaceURILiteral
   5       | KeywordDefault KeywordNamespace Equal NamespaceURILiteral
   6       | KeywordDefault KeywordNamespace NamespacePrefix Equal NamespaceURILiteral
   7       | KeywordDatatypes DatatypePrefix Equal Literal

   8  NamespacePrefix : IdentifierOrKeyword

   9  DatatypePrefix : IdentifierOrKeyword

  10  NamespaceURILiteral : Literal
  11                      | KeywordInherit

  12  TopLevelBody : Pattern
  13               | Grammar

  14  Grammar :
  15          | Member Grammar

  16  Member : AnnotatedComponent
  17         | AnnotationElementNotKeyword

  18  AnnotatedComponent : Annotations Component

  19  Component : Start
  20            | Define
  21            | Include
  22            | Div

  23  Start : KeywordStart AssignOp Pattern

  24  Define : Identifier AssignOp Pattern

  25  AssignOp : Equal
  26           | OrEquals
  27           | AndEquals

  28  Include : KeywordInclude AnyURILiteral OptInherit OptIncludeBody

  29  AnyURILiteral : Literal

  30  OptInherit :
  31             | KeywordInherit Equal IdentifierOrKeyword

  32  OptIncludeBody :
  33                 | OpenCurly IncludeBody CloseCurly

  34  IncludeBody :
  35              | IncludeMember IncludeBody

  36  IncludeMember : AnnotatedIncludeComponent
  37                | AnnotationElementNotKeyword

  38  AnnotatedIncludeComponent : Annotations IncludeComponent

  39  IncludeComponent : Start
  40                   | Define
  41                   | IncludeDiv

  42  Div : KeywordDiv OpenCurly Grammar CloseCurly

  43  IncludeDiv : KeywordDiv OpenCurly IncludeBody CloseCurly

  44  Pattern : InnerPattern

  45  InnerPattern : InnerParticle
  46               | ParticleChoice
  47               | ParticleGroup
  48               | ParticleInterleave
  49               | AnnotatedDataExcept

  50  ParticleChoice : Particle Bar Particle
  51                 | Particle Bar ParticleChoice

  52  ParticleGroup : Particle Comma Particle
  53                | Particle Comma ParticleGroup

  54  ParticleInterleave : Particle Amp Particle
  55                     | Particle Amp ParticleInterleave

  56  Particle : InnerParticle

  57  InnerParticle : AnnotatedPrimary
  58                | RepeatedPrimary FollowAnnotations

  59  RepeatedPrimary : AnnotatedPrimary Asterisk
  60                  | AnnotatedPrimary Plus
  61                  | AnnotatedPrimary Question

  62  AnnotatedPrimary : LeadAnnotatedPrimary FollowAnnotations

  63  AnnotatedDataExcept : LeadAnnotatedDataExcept FollowAnnotations

  64  LeadAnnotatedDataExcept : Annotations DataExcept

  65  LeadAnnotatedPrimary : Annotations Primary
  66                       | Annotations OpenParen InnerPattern CloseParen

  67  Primary : KeywordElement NameClass OpenCurly Pattern CloseCurly
  68          | KeywordAttribute NameClass OpenCurly Pattern CloseCurly
  69          | KeywordMixed OpenCurly Pattern CloseCurly
  70          | KeywordList OpenCurly Pattern CloseCurly
  71          | DatatypeName OptParams
  72          | DatatypeName DatatypeValue
  73          | DatatypeValue
  74          | KeywordEmpty
  75          | KeywordNotAllowed
  76          | KeywordText
  77          | Ref
  78          | KeywordParent Ref
  79          | KeywordGrammar OpenCurly Grammar CloseCurly
  80          | KeywordExternal AnyURILiteral OptInherit

  81  DataExcept : DatatypeName OptParams Minus LeadAnnotatedPrimary

  82  Ref : Identifier

  83  DatatypeName : CName
  84               | KeywordString
  85               | KeywordToken

  86  DatatypeValue : Literal

  87  OptParams :
  88            | OpenCurly Params CloseCurly

  89  Params :
  90         | Param Params

  91  Param : Annotations IdentifierOrKeyword Equal Literal

  92  NameClass : InnerNameClass

  93  InnerNameClass : AnnotatedSimpleNameClass
  94                 | NameClassChoice
  95                 | AnnotatedExceptNameClass

  96  NameClassChoice : AnnotatedSimpleNameClass Bar AnnotatedSimpleNameClass
  97                  | AnnotatedSimpleNameClass Bar NameClassChoice

  98  AnnotatedExceptNameClass : LeadAnnotatedExceptNameClass FollowAnnotations

  99  LeadAnnotatedExceptNameClass : Annotations ExceptNameClass

 100  AnnotatedSimpleNameClass : LeadAnnotatedSimpleNameClass FollowAnnotations

 101  LeadAnnotatedSimpleNameClass : Annotations SimpleNameClass
 102                               | Annotations OpenParen InnerNameClass CloseParen

 103  ExceptNameClass : NsName Minus LeadAnnotatedSimpleNameClass
 104                  | Asterisk Minus LeadAnnotatedSimpleNameClass

 105  SimpleNameClass : IdentifierOrKeyword
 106                  | CName
 107                  | NsName
 108                  | Asterisk

 109  FollowAnnotations :
 110                    | TwoGreaters AnnotationElement FollowAnnotations

 111  Annotations : Documentations
 112              | Documentations OpenBracket AnnotationContentInAnnotations CloseBracket

 113  AnnotationContentInAnnotations :
 114                                 | PrefixedName Equal Literal AnnotationContentInAnnotations
 115                                 | PrefixedName AnnotationAttributesContent AnnotationContentInAnnotations
 116                                 | IdentifierOrKeyword AnnotationAttributesContent AnnotationContentInAnnotations

 117  AttributableAnnotations :
 118                          | AttributableAnnotations PrefixedName Equal Literal NonAttributableAnnotations

 119  NonAttributableAnnotations :
 120                             | PrefixedName AnnotationAttributesContent
 121                             | NonAttributableAnnotations IdentifierOrKeyword AnnotationAttributesContent

 122  AnnotationElement : ForeignElementName AnnotationAttributesContent

 123  ForeignElementName : IdentifierOrKeyword
 124                     | PrefixedName

 125  AnnotationElementNotKeyword : ERROR

 126  AnnotationAttributesContent : OpenBracket NestedAnnotationContents CloseBracket

 127  NestedAnnotationContents :
 128                           | PrefixedName Equal Literal NestedAnnotationContents
 129                           | IdentifierOrKeyword Equal Literal NestedAnnotationContents
 130                           | PrefixedName AnnotationAttributesContent NestedAnnotationContents
 131                           | IdentifierOrKeyword AnnotationAttributesContent NestedAnnotationContents
 132                           | Literal
 133                           | Literal NestedAnnotationContents

 134  NestedAnnotationAttributes :
 135                             | AnyAttributeName Equal Literal NestedAnnotationAttributes

 136  AnyAttributeName : IdentifierOrKeyword
 137                   | PrefixedName

 138  AnnotationContent :
 139                    | NestedAnnotationElement AnnotationContent
 140                    | Literal AnnotationContent

 141  NestedAnnotationElement : AnyElementName AnnotationAttributesContent

 142  AnyElementName : IdentifierOrKeyword
 143                 | PrefixedName

 144  PrefixedName : CName

 145  Documentations :
 146                 | Documentation Documentations

 147  IdentifierOrKeyword : Identifier
 148                      | Keyword

 149  Keyword : KeywordAttribute
 150          | KeywordDefault
 151          | KeywordDatatypes
 152          | KeywordDiv
 153          | KeywordElement
 154          | KeywordEmpty
 155          | KeywordExternal
 156          | KeywordGrammar
 157          | KeywordInclude
 158          | KeywordInherit
 159          | KeywordList
 160          | KeywordMixed
 161          | KeywordNamespace
 162          | KeywordNotAllowed
 163          | KeywordParent
 164          | KeywordStart
 165          | KeywordString
 166          | KeywordText
 167          | KeywordToken

 168  Literal : LiteralSegment
 169          | LiteralSegment Tilde Literal

 170  Identifier : NCName
 171             | QuotedIdentifier

state 0
	$accept : . TopLevel $end  (0)
	Preamble : .  (2)

	KeywordDefault  shift 1
	KeywordDatatypes  shift 2
	KeywordNamespace  shift 3
	$end  reduce 2
	ERROR  reduce 2
	KeywordAttribute  reduce 2
	KeywordDiv  reduce 2
	KeywordElement  reduce 2
	KeywordEmpty  reduce 2
	KeywordExternal  reduce 2
	KeywordGrammar  reduce 2
	KeywordInclude  reduce 2
	KeywordList  reduce 2
	KeywordMixed  reduce 2
	KeywordNotAllowed  reduce 2
	KeywordParent  reduce 2
	KeywordStart  reduce 2
	KeywordString  reduce 2
	KeywordText  reduce 2
	KeywordToken  reduce 2
	OpenParen  reduce 2
	OpenBracket  reduce 2
	LiteralSegment  reduce 2
	NCName  reduce 2
	QuotedIdentifier  reduce 2
	Documentation  reduce 2
	CName  reduce 2

	TopLevel  goto 4
	Preamble  goto 5
	Decl  goto 6


state 1
	Decl : KeywordDefault . KeywordNamespace Equal NamespaceURILiteral  (5)
	Decl : KeywordDefault . KeywordNamespace NamespacePrefix Equal NamespaceURILiteral  (6)

	KeywordNamespace  shift 7
	.  error


state 2
	Decl : KeywordDatatypes . DatatypePrefix Equal Literal  (7)

	KeywordAttribute  shift 8
	KeywordDefault  shift 9
	KeywordDatatypes  shift 10
	KeywordDiv  shift 11
	KeywordElement  shift 12
	KeywordEmpty  shift 13
	KeywordExternal  shift 14
	KeywordGrammar  shift 15
	KeywordInclude  shift 16
	KeywordInherit  shift 17
	KeywordList  shift 18
	KeywordMixed  shift 19
	KeywordNamespace  shift 20
	KeywordNotAllowed  shift 21
	KeywordParent  shift 22
	KeywordStart  shift 23
	KeywordString  shift 24
	KeywordText  shift 25
	KeywordToken  shift 26
	NCName  shift 27
	QuotedIdentifier  shift 28
	.  error

	DatatypePrefix  goto 29
	IdentifierOrKeyword  goto 30
	Identifier  goto 31
	Keyword  goto 32


state 3
	Decl : KeywordNamespace . NamespacePrefix Equal NamespaceURILiteral  (4)

	KeywordAttribute  shift 8
	KeywordDefault  shift 9
	KeywordDatatypes  shift 10
	KeywordDiv  shift 11
	KeywordElement  shift 12
	KeywordEmpty  shift 13
	KeywordExternal  shift 14
	KeywordGrammar  shift 15
	KeywordInclude  shift 16
	KeywordInherit  shift 17
	KeywordList  shift 18
	KeywordMixed  shift 19
	KeywordNamespace  shift 20
	KeywordNotAllowed  shift 21
	KeywordParent  shift 22
	KeywordStart  shift 23
	KeywordString  shift 24
	KeywordText  shift 25
	KeywordToken  shift 26
	NCName  shift 27
	QuotedIdentifier  shift 28
	.  error

	NamespacePrefix  goto 33
	IdentifierOrKeyword  goto 34
	Identifier  goto 31
	Keyword  goto 32


state 4
	$accept : TopLevel . $end  (0)

	$end  accept


state 5
	TopLevel : Preamble . TopLevelBody  (1)
	Grammar : .  (14)
	Documentations : .  (145)

	ERROR  shift 35
	Documentation  shift 36
	$end  reduce 14
	KeywordAttribute  reduce 145
	KeywordDiv  reduce 145
	KeywordElement  reduce 145
	KeywordEmpty  reduce 145
	KeywordExternal  reduce 145
	KeywordGrammar  reduce 145
	KeywordInclude  reduce 145
	KeywordList  reduce 145
	KeywordMixed  reduce 145
	KeywordNotAllowed  reduce 145
	KeywordParent  reduce 145
	KeywordStart  reduce 145
	KeywordString  reduce 145
	KeywordText  reduce 145
	KeywordToken  reduce 145
	OpenParen  reduce 145
	OpenBracket  reduce 145
	LiteralSegment  reduce 145
	NCName  reduce 145
	QuotedIdentifier  reduce 145
	CName  reduce 145

	TopLevelBody  goto 37
	Pattern  goto 38
	Grammar  goto 39
	Member  goto 40
	AnnotatedComponent  goto 41
	AnnotationElementNotKeyword  goto 42
	Annotations  goto 43
	InnerPattern  goto 44
	InnerParticle  goto 45
	ParticleChoice  goto 46
	ParticleGroup  goto 47
	ParticleInterleave  goto 48
	AnnotatedDataExcept  goto 49
	Particle  goto 50
	AnnotatedPrimary  goto 51
	RepeatedPrimary  goto 52
	LeadAnnotatedPrimary  goto 53
	LeadAnnotatedDataExcept  goto 54
	Documentations  goto 55


state 6
	Preamble : Decl . Preamble  (3)
	Preamble : .  (2)

	KeywordDefault  shift 1
	KeywordDatatypes  shift 2
	KeywordNamespace  shift 3
	$end  reduce 2
	ERROR  reduce 2
	KeywordAttribute  reduce 2
	KeywordDiv  reduce 2
	KeywordElement  reduce 2
	KeywordEmpty  reduce 2
	KeywordExternal  reduce 2
	KeywordGrammar  reduce 2
	KeywordInclude  reduce 2
	KeywordList  reduce 2
	KeywordMixed  reduce 2
	KeywordNotAllowed  reduce 2
	KeywordParent  reduce 2
	KeywordStart  reduce 2
	KeywordString  reduce 2
	KeywordText  reduce 2
	KeywordToken  reduce 2
	OpenParen  reduce 2
	OpenBracket  reduce 2
	LiteralSegment  reduce 2
	NCName  reduce 2
	QuotedIdentifier  reduce 2
	Documentation  reduce 2
	CName  reduce 2

	Preamble  goto 56
	Decl  goto 6


state 7
	Decl : KeywordDefault KeywordNamespace . Equal NamespaceURILiteral  (5)
	Decl : KeywordDefault KeywordNamespace . NamespacePrefix Equal NamespaceURILiteral  (6)

	KeywordAttribute  shift 8
	KeywordDefault  shift 9
	KeywordDatatypes  shift 10
	KeywordDiv  shift 11
	KeywordElement  shift 12
	KeywordEmpty  shift 13
	KeywordExternal  shift 14
	KeywordGrammar  shift 15
	KeywordInclude  shift 16
	KeywordInherit  shift 17
	KeywordList  shift 18
	KeywordMixed  shift 19
	KeywordNamespace  shift 20
	KeywordNotAllowed  shift 21
	KeywordParent  shift 22
	KeywordStart  shift 23
	KeywordString  shift 24
	KeywordText  shift 25
	KeywordToken  shift 26
	Equal  shift 57
	NCName  shift 27
	QuotedIdentifier  shift 28
	.  error

	NamespacePrefix  goto 58
	IdentifierOrKeyword  goto 34
	Identifier  goto 31
	Keyword  goto 32


state 8
	Keyword : KeywordAttribute .  (149)

	.  reduce 149


state 9
	Keyword : KeywordDefault .  (150)

	.  reduce 150


state 10
	Keyword : KeywordDatatypes .  (151)

	.  reduce 151


state 11
	Keyword : KeywordDiv .  (152)

	.  reduce 152


state 12
	Keyword : KeywordElement .  (153)

	.  reduce 153


state 13
	Keyword : KeywordEmpty .  (154)

	.  reduce 154


state 14
	Keyword : KeywordExternal .  (155)

	.  reduce 155


state 15
	Keyword : KeywordGrammar .  (156)

	.  reduce 156


state 16
	Keyword : KeywordInclude .  (157)

	.  reduce 157


state 17
	Keyword : KeywordInherit .  (158)

	.  reduce 158


state 18
	Keyword : KeywordList .  (159)

	.  reduce 159


state 19
	Keyword : KeywordMixed .  (160)

	.  reduce 160


state 20
	Keyword : KeywordNamespace .  (161)

	.  reduce 161


state 21
	Keyword : KeywordNotAllowed .  (162)

	.  reduce 162


state 22
	Keyword : KeywordParent .  (163)

	.  reduce 163


state 23
	Keyword : KeywordStart .  (164)

	.  reduce 164


state 24
	Keyword : KeywordString .  (165)

	.  reduce 165


state 25
	Keyword : KeywordText .  (166)

	.  reduce 166


state 26
	Keyword : KeywordToken .  (167)

	.  reduce 167


state 27
	Identifier : NCName .  (170)

	.  reduce 170


state 28
	Identifier : QuotedIdentifier .  (171)

	.  reduce 171


state 29
	Decl : KeywordDatatypes DatatypePrefix . Equal Literal  (7)

	Equal  shift 59
	.  error


state 30
	DatatypePrefix : IdentifierOrKeyword .  (9)

	.  reduce 9


state 31
	IdentifierOrKeyword : Identifier .  (147)

	.  reduce 147


state 32
	IdentifierOrKeyword : Keyword .  (148)

	.  reduce 148


state 33
	Decl : KeywordNamespace NamespacePrefix . Equal NamespaceURILiteral  (4)

	Equal  shift 60
	.  error


state 34
	NamespacePrefix : IdentifierOrKeyword .  (8)

	.  reduce 8


state 35
	AnnotationElementNotKeyword : ERROR .  (125)

	.  reduce 125


state 36
	Documentations : Documentation . Documentations  (146)
	Documentations : .  (145)

	Documentation  shift 36
	KeywordAttribute  reduce 145
	KeywordDefault  reduce 145
	KeywordDatatypes  reduce 145
	KeywordDiv  reduce 145
	KeywordElement  reduce 145
	KeywordEmpty  reduce 145
	KeywordExternal  reduce 145
	KeywordGrammar  reduce 145
	KeywordInclude  reduce 145
	KeywordInherit  reduce 145
	KeywordList  reduce 145
	KeywordMixed  reduce 145
	KeywordNamespace  reduce 145
	KeywordNotAllowed  reduce 145
	KeywordParent  reduce 145
	KeywordStart  reduce 145
	KeywordString  reduce 145
	KeywordText  reduce 145
	KeywordToken  reduce 145
	OpenParen  reduce 145
	OpenBracket  reduce 145
	Asterisk  reduce 145
	LiteralSegment  reduce 145
	NCName  reduce 145
	QuotedIdentifier  reduce 145
	CName  reduce 145
	NsName  reduce 145

	Documentations  goto 61


state 37
	TopLevel : Preamble TopLevelBody .  (1)

	.  reduce 1


state 38
	TopLevelBody : Pattern .  (12)

	.  reduce 12


state 39
	TopLevelBody : Grammar .  (13)

	.  reduce 13


state 40
	Grammar : Member . Grammar  (15)
	Grammar : .  (14)
	Documentations : .  (145)

	ERROR  shift 35
	Documentation  shift 36
	$end  reduce 14
	KeywordDiv  reduce 145
	KeywordInclude  reduce 145
	KeywordStart  reduce 145
	CloseCurly  reduce 14
	OpenBracket  reduce 145
	NCName  reduce 145
	QuotedIdentifier  reduce 145

	Grammar  goto 62
	Member  goto 40
	AnnotatedComponent  goto 41
	AnnotationElementNotKeyword  goto 42
	Annotations  goto 63
	Documentations  goto 55


state 41
	Member : AnnotatedComponent .  (16)

	.  reduce 16


state 42
	Member : AnnotationElementNotKeyword .  (17)

	.  reduce 17


state 43
	AnnotatedComponent : Annotations . Component  (18)
	LeadAnnotatedDataExcept : Annotations . DataExcept  (64)
	LeadAnnotatedPrimary : Annotations . Primary  (65)
	LeadAnnotatedPrimary : Annotations . OpenParen InnerPattern CloseParen  (66)

	KeywordAttribute  shift 64
	KeywordDiv  shift 65
	KeywordElement  shift 66
	KeywordEmpty  shift 67
	KeywordExternal  shift 68
	KeywordGrammar  shift 69
	KeywordInclude  shift 70
	KeywordList  shift 71
	KeywordMixed  shift 72
	KeywordNotAllowed  shift 73
	KeywordParent  shift 74
	KeywordStart  shift 75
	KeywordString  shift 76
	KeywordText  shift 77
	KeywordToken  shift 78
	OpenParen  shift 79
	LiteralSegment  shift 80
	NCName  shift 27
	QuotedIdentifier  shift 28
	CName  shift 81
	.  error

	Literal  goto 82
	Component  goto 83
	Start  goto 84
	Define  goto 85
	Include  goto 86
	Div  goto 87
	Identifier  goto 88
	DataExcept  goto 89
	Primary  goto 90
	DatatypeName  goto 91
	DatatypeValue  goto 92
	Ref  goto 93


state 44
	Pattern : InnerPattern .  (44)

	.  reduce 44


state 45
	InnerPattern : InnerParticle .  (45)
	Particle : InnerParticle .  (56)

	$end  reduce 45
	ERROR  reduce 45
	KeywordDiv  reduce 45
	KeywordInclude  reduce 45
	KeywordStart  reduce 45
	Comma  reduce 56
	CloseCurly  reduce 45
	CloseParen  reduce 45
	OpenBracket  reduce 45
	Amp  reduce 56
	Bar  reduce 56
	NCName  reduce 45
	QuotedIdentifier  reduce 45
	Documentation  reduce 45


state 46
	InnerPattern : ParticleChoice .  (46)

	.  reduce 46


state 47
	InnerPattern : ParticleGroup .  (47)

	.  reduce 47


state 48
	InnerPattern : ParticleInterleave .  (48)

	.  reduce 48


state 49
	InnerPattern : AnnotatedDataExcept .  (49)

	.  reduce 49


state 50
	ParticleChoice : Particle . Bar Particle  (50)
	ParticleChoice : Particle . Bar ParticleChoice  (51)
	ParticleGroup : Particle . Comma Particle  (52)
	ParticleGroup : Particle . Comma ParticleGroup  (53)
	ParticleInterleave : Particle . Amp Particle  (54)
	ParticleInterleave : Particle . Amp ParticleInterleave  (55)

	Comma  shift 94
	Amp  shift 95
	Bar  shift 96
	.  error


state 51
	InnerParticle : AnnotatedPrimary .  (57)
	RepeatedPrimary : AnnotatedPrimary . Asterisk  (59)
	RepeatedPrimary : AnnotatedPrimary . Plus  (60)
	RepeatedPrimary : AnnotatedPrimary . Question  (61)

	Question  shift 97
	Asterisk  shift 98
	Plus  shift 99
	$end  reduce 57
	ERROR  reduce 57
	KeywordDiv  reduce 57
	KeywordInclude  reduce 57
	KeywordStart  reduce 57
	Comma  reduce 57
	CloseCurly  reduce 57
	CloseParen  reduce 57
	OpenBracket  reduce 57
	Amp  reduce 57
	Bar  reduce 57
	NCName  reduce 57
	QuotedIdentifier  reduce 57
	Documentation  reduce 57


state 52
	InnerParticle : RepeatedPrimary . FollowAnnotations  (58)
	FollowAnnotations : .  (109)

	TwoGreaters  shift 100
	$end  reduce 109
	ERROR  reduce 109
	KeywordDiv  reduce 109
	KeywordInclude  reduce 109
	KeywordStart  reduce 109
	Comma  reduce 109
	CloseCurly  reduce 109
	CloseParen  reduce 109
	OpenBracket  reduce 109
	Amp  reduce 109
	Bar  reduce 109
	NCName  reduce 109
	QuotedIdentifier  reduce 109
	Documentation  reduce 109

	FollowAnnotations  goto 101


state 53
	AnnotatedPrimary : LeadAnnotatedPrimary . FollowAnnotations  (62)
	FollowAnnotations : .  (109)

	TwoGreaters  shift 100
	$end  reduce 109
	ERROR  reduce 109
	KeywordDiv  reduce 109
	KeywordInclude  reduce 109
	KeywordStart  reduce 109
	Comma  reduce 109
	CloseCurly  reduce 109
	CloseParen  reduce 109
	OpenBracket  reduce 109
	Amp  reduce 109
	Bar  reduce 109
	Question  reduce 109
	Asterisk  reduce 109
	Plus  reduce 109
	NCName  reduce 109
	QuotedIdentifier  reduce 109
	Documentation  reduce 109

	FollowAnnotations  goto 102


state 54
	AnnotatedDataExcept : LeadAnnotatedDataExcept . FollowAnnotations  (63)
	FollowAnnotations : .  (109)

	TwoGreaters  shift 100
	$end  reduce 109
	ERROR  reduce 109
	KeywordDiv  reduce 109
	KeywordInclude  reduce 109
	KeywordStart  reduce 109
	CloseCurly  reduce 109
	CloseParen  reduce 109
	OpenBracket  reduce 109
	NCName  reduce 109
	QuotedIdentifier  reduce 109
	Documentation  reduce 109

	FollowAnnotations  goto 103


state 55
	Annotations : Documentations .  (111)
	Annotations : Documentations . OpenBracket AnnotationContentInAnnotations CloseBracket  (112)

	OpenBracket  shift 104
	KeywordAttribute  reduce 111
	KeywordDefault  reduce 111
	KeywordDatatypes  reduce 111
	KeywordDiv  reduce 111
	KeywordElement  reduce 111
	KeywordEmpty  reduce 111
	KeywordExternal  reduce 111
	KeywordGrammar  reduce 111
	KeywordInclude  reduce 111
	KeywordInherit  reduce 111
	KeywordList  reduce 111
	KeywordMixed  reduce 111
	KeywordNamespace  reduce 111
	KeywordNotAllowed  reduce 111
	KeywordParent  reduce 111
	KeywordStart  reduce 111
	KeywordString  reduce 111
	KeywordText  reduce 111
	KeywordToken  reduce 111
	OpenParen  reduce 111
	Asterisk  reduce 111
	LiteralSegment  reduce 111
	NCName  reduce 111
	QuotedIdentifier  reduce 111
	CName  reduce 111
	NsName  reduce 111


state 56
	Preamble : Decl Preamble .  (3)

	.  reduce 3


state 57
	Decl : KeywordDefault KeywordNamespace Equal . NamespaceURILiteral  (5)

	KeywordInherit  shift 105
	LiteralSegment  shift 80
	.  error

	NamespaceURILiteral  goto 106
	Literal  goto 107


state 58
	Decl : KeywordDefault KeywordNamespace NamespacePrefix . Equal NamespaceURILiteral  (6)

	Equal  shift 108
	.  error


state 59
	Decl : KeywordDatatypes DatatypePrefix Equal . Literal  (7)

	LiteralSegment  shift 80
	.  error

	Literal  goto 109


state 60
	Decl : KeywordNamespace NamespacePrefix Equal . NamespaceURILiteral  (4)

	KeywordInherit  shift 105
	LiteralSegment  shift 80
	.  error

	NamespaceURILiteral  goto 110
	Literal  goto 107


state 61
	Documentations : Documentation Documentations .  (146)

	.  reduce 146


state 62
	Grammar : Member Grammar .  (15)

	.  reduce 15


state 63
	AnnotatedComponent : Annotations . Component  (18)

	KeywordDiv  shift 65
	KeywordInclude  shift 70
	KeywordStart  shift 75
	NCName  shift 27
	QuotedIdentifier  shift 28
	.  error

	Component  goto 83
	Start  goto 84
	Define  goto 85
	Include  goto 86
	Div  goto 87
	Identifier  goto 111


state 64
	Primary : KeywordAttribute . NameClass OpenCurly Pattern CloseCurly  (68)
	Documentations : .  (145)

	Documentation  shift 36
	KeywordAttribute  reduce 145
	KeywordDefault  reduce 145
	KeywordDatatypes  reduce 145
	KeywordDiv  reduce 145
	KeywordElement  reduce 145
	KeywordEmpty  reduce 145
	KeywordExternal  reduce 145
	KeywordGrammar  reduce 145
	KeywordInclude  reduce 145
	KeywordInherit  reduce 145
	KeywordList  reduce 145
	KeywordMixed  reduce 145
	KeywordNamespace  reduce 145
	KeywordNotAllowed  reduce 145
	KeywordParent  reduce 145
	KeywordStart  reduce 145
	KeywordString  reduce 145
	KeywordText  reduce 145
	KeywordToken  reduce 145
	OpenParen  reduce 145
	OpenBracket  reduce 145
	Asterisk  reduce 145
	NCName  reduce 145
	QuotedIdentifier  reduce 145
	CName  reduce 145
	NsName  reduce 145

	Annotations  goto 112
	NameClass  goto 113
	InnerNameClass  goto 114
	AnnotatedSimpleNameClass  goto 115
	NameClassChoice  goto 116
	AnnotatedExceptNameClass  goto 117
	LeadAnnotatedExceptNameClass  goto 118
	LeadAnnotatedSimpleNameClass  goto 119
	Documentations  goto 55


state 65
	Div : KeywordDiv . OpenCurly Grammar CloseCurly  (42)

	OpenCurly  shift 120
	.  error


state 66
	Primary : KeywordElement . NameClass OpenCurly Pattern CloseCurly  (67)
	Documentations : .  (145)

	Documentation  shift 36
	KeywordAttribute  reduce 145
	KeywordDefault  reduce 145
	KeywordDatatypes  reduce 145
	KeywordDiv  reduce 145
	KeywordElement  reduce 145
	KeywordEmpty  reduce 145
	KeywordExternal  reduce 145
	KeywordGrammar  reduce 145
	KeywordInclude  reduce 145
	KeywordInherit  reduce 145
	KeywordList  reduce 145
	KeywordMixed  reduce 145
	KeywordNamespace  reduce 145
	KeywordNotAllowed  reduce 145
	KeywordParent  reduce 145
	KeywordStart  reduce 145
	KeywordString  reduce 145
	KeywordText  reduce 145
	KeywordToken  reduce 145
	OpenParen  reduce 145
	OpenBracket  reduce 145
	Asterisk  reduce 145
	NCName  reduce 145
	QuotedIdentifier  reduce 145
	CName  reduce 145
	NsName  reduce 145

	Annotations  goto 112
	NameClass  goto 121
	InnerNameClass  goto 114
	AnnotatedSimpleNameClass  goto 115
	NameClassChoice  goto 116
	AnnotatedExceptNameClass  goto 117
	LeadAnnotatedExceptNameClass  goto 118
	LeadAnnotatedSimpleNameClass  goto 119
	Documentations  goto 55


state 67
	Primary : KeywordEmpty .  (74)

	.  reduce 74


state 68
	Primary : KeywordExternal . AnyURILiteral OptInherit  (80)

	LiteralSegment  shift 80
	.  error

	Literal  goto 122
	AnyURILiteral  goto 123


state 69
	Primary : KeywordGrammar . OpenCurly Grammar CloseCurly  (79)

	OpenCurly  shift 124
	.  error


state 70
	Include : KeywordInclude . AnyURILiteral OptInherit OptIncludeBody  (28)

	LiteralSegment  shift 80
	.  error

	Literal  goto 122
	AnyURILiteral  goto 125


state 71
	Primary : KeywordList . OpenCurly Pattern CloseCurly  (70)

	OpenCurly  shift 126
	.  error


state 72
	Primary : KeywordMixed . OpenCurly Pattern CloseCurly  (69)

	OpenCurly  shift 127
	.  error


state 73
	Primary : KeywordNotAllowed .  (75)

	.  reduce 75


state 74
	Primary : KeywordParent . Ref  (78)

	NCName  shift 27
	QuotedIdentifier  shift 28
	.  error

	Identifier  goto 128
	Ref  goto 129


state 75
	Start : KeywordStart . AssignOp Pattern  (23)

	Equal  shift 130
	OrEquals  shift 131
	AndEquals  shift 132
	.  error

	AssignOp  goto 133


state 76
	DatatypeName : KeywordString .  (84)

	.  reduce 84


state 77
	Primary : KeywordText .  (76)

	.  reduce 76


state 78
	DatatypeName : KeywordToken .  (85)

	.  reduce 85


state 79
	LeadAnnotatedPrimary : Annotations OpenParen . InnerPattern CloseParen  (66)
	Documentations : .  (145)

	Documentation  shift 36
	KeywordAttribute  reduce 145
	KeywordElement  reduce 145
	KeywordEmpty  reduce 145
	KeywordExternal  reduce 145
	KeywordGrammar  reduce 145
	KeywordList  reduce 145
	KeywordMixed  reduce 145
	KeywordNotAllowed  reduce 145
	KeywordParent  reduce 145
	KeywordString  reduce 145
	KeywordText  reduce 145
	KeywordToken  reduce 145
	OpenParen  reduce 145
	OpenBracket  reduce 145
	LiteralSegment  reduce 145
	NCName  reduce 145
	QuotedIdentifier  reduce 145
	CName  reduce 145

	Annotations  goto 134
	InnerPattern  goto 135
	InnerParticle  goto 45
	ParticleChoice  goto 46
	ParticleGroup  goto 47
	ParticleInterleave  goto 48
	AnnotatedDataExcept  goto 49
	Particle  goto 50
	AnnotatedPrimary  goto 51
	RepeatedPrimary  goto 52
	LeadAnnotatedPrimary  goto 53
	LeadAnnotatedDataExcept  goto 54
	Documentations  goto 55


state 80
	Literal : LiteralSegment .  (168)
	Literal : LiteralSegment . Tilde Literal  (169)
